--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -6,6 +6,9 @@ image:
 service:
   externalPort: 8080
   internalPort: 8080
+metrics:
+  serviceMonitor:
+    enable: false
 resources:
   requests:
     memory: "256Mi"
