charts/coturn: update coturn container image version.
Starting with this version, our coturn image ships with the pre-stop hook
script, which is required for graceful termination.

--- a/charts/coturn/values.yaml
+++ b/charts/coturn/values.yaml
@@ -31,9 +31,8 @@ coturnMetricsListenPort: 9641
 # relies on external traffic management (e.g. service discovery for active coturn
 # instances) to prevent clients from sending new requests to pods which are in a
 # terminating state.
-#
-# TODO(sysvinit): write a changelog entry.
 coturnGracefulTermination: false
 # Grace period for terminating coturn pods, after which they will be forcibly
-# terminated.
+# terminated. This setting is only effective when coturnGracefulTermination is
+# set to true.
 coturnGracePeriodSeconds: 86400 # one day
