charts/nginz: add servicemonitor support
With the move to a single Service for nginz, exposing two ports, we can
actually properly target the http port of nginz for metrics collection.

As with the other services, the service monitor creation is opt-in.

--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -6,6 +6,9 @@ resources:
   limits:
     memory: "1024Mi"
     cpu: "2"
+metrics:
+  serviceMonitor:
+    enabled: false
 images:
   nginzDisco:
     repository: quay.io/wire/nginz_disco
