nginx-ingress-services: unify nginz{-http,-tcp} services
Make this actually only one service, exposing two ports.

This will allow selecting nginz for metrics scraping on the right port,
without the need for additional labels to distinguish `nginz-tcp` from
`nginz-http`.

--- a/charts/nginx-ingress-services/templates/ingress.yaml
+++ b/charts/nginx-ingress-services/templates/ingress.yaml
@@ -32,16 +32,16 @@ spec:
         paths:
           - path: /
             backend:
-              serviceName: nginz-http
-              servicePort: {{ .Values.service.nginz.externalHttpPort }}
+              serviceName: nginz
+              servicePort: http
 {{- if .Values.websockets.enabled }}
     - host: {{ .Values.config.dns.ssl }}
       http:
         paths:
           - path: /
             backend:
-              serviceName: nginz-tcp
-              servicePort: {{ .Values.service.nginz.externalTcpPort }}
+              serviceName: nginz
+              servicePort: ws
 {{- end }}
 {{- if .Values.webapp.enabled }}
     - host: {{ .Values.config.dns.webapp }}
