--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -270,6 +270,7 @@ library
     , tinylog >=0.10
     , transformers >=0.3
     , types-common >=0.16
+    , types-common-aws
     , types-common-journal >=0.1
     , unliftio >=0.2
     , unordered-containers >=0.2
