--- a/libs/types-common-aws/types-common-aws.cabal
+++ b/libs/types-common-aws/types-common-aws.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: e21810d1081ee50f1d775ea6112131f62a9fb270d33d2c8a44024afa384a34ff
+-- hash: 329c0cd9a1a42c313141a132db82bbfc665b36ff4066dbe6d1b5c1706fc4cb01
 
 name:           types-common-aws
 version:        0.16.0
@@ -30,6 +30,7 @@ flag protobuf
 
 library
   exposed-modules:
+      AWS.Util
       Util.Test.SQS
   other-modules:
       Paths_types_common_aws
@@ -91,6 +92,7 @@ library
     , tasty
     , tasty-hunit
     , text >=0.11
+    , time
   if impl(ghc >=8)
     ghc-options: -fno-warn-redundant-constraints
   if flag(protobuf)
