--- a/services/gundeck/gundeck.cabal
+++ b/services/gundeck/gundeck.cabal
@@ -140,6 +140,7 @@ library
     , tinylog >=0.10
     , tls >=1.3.4
     , types-common >=0.16
+    , types-common-aws
     , unliftio >=0.2
     , unordered-containers >=0.2
     , uuid >=1.3
