--- a/services/cargohold/cargohold.cabal
+++ b/services/cargohold/cargohold.cabal
@@ -113,6 +113,7 @@ library
     , imports
     , kan-extensions
     , lens >=4.1
+    , metrics-core
     , metrics-wai >=0.4
     , mime >=0.4
     , optparse-applicative >=0.10
@@ -126,6 +127,8 @@ library
     , time >=1.4
     , tinylog >=0.10
     , types-common >=0.16
+    , types-common-aws
+    , unliftio
     , unordered-containers >=0.2
     , uri-bytestring >=0.2
     , uuid >=1.3.5
