--- a/services/cargohold/package.yaml
+++ b/services/cargohold/package.yaml
@@ -47,6 +47,7 @@ library:
   - http-client-openssl >=0.2
   - lens >=4.1
   - metrics-wai >=0.4
+  - metrics-core
   - optparse-applicative >=0.10
   - retry >=0.5
   - resourcet >=1.1
@@ -56,6 +57,8 @@ library:
   - time >=1.4
   - tinylog >=0.10
   - types-common >=0.16
+  - types-common-aws
+  - unliftio
   - unordered-containers >=0.2
   - uri-bytestring >=0.2
   - uuid >=1.3.5
