--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -213,6 +213,7 @@ library
     , kan-extensions
     , lens >=4.4
     , memory
+    , metrics-core
     , metrics-wai >=0.4
     , mtl >=2.2
     , optparse-applicative >=0.10
@@ -250,6 +251,7 @@ library
     , tls >=1.3.10
     , transformers
     , types-common >=0.16
+    , types-common-aws
     , types-common-journal >=0.1
     , unliftio >=0.2
     , unordered-containers >=0.2
