--- a/services/galley/package.yaml
+++ b/services/galley/package.yaml
@@ -65,6 +65,7 @@ library:
   - lens >=4.4
   - memory
   - metrics-wai >=0.4
+  - metrics-core
   - mtl >=2.2
   - optparse-applicative >=0.10
   - pem
@@ -97,6 +98,7 @@ library:
   - tls >=1.3.10
   - types-common >=0.16
   - types-common-journal >=0.1
+  - types-common-aws
   - unliftio >=0.2
   - unordered-containers >=0.2
   - uri-bytestring >=0.2
