--- a/charts/backoffice/values.yaml
+++ b/charts/backoffice/values.yaml
@@ -6,7 +6,7 @@ images:
     pullPolicy: IfNotPresent
   stern:
     repository: quay.io/wire/stern
-    tag: 2.93.0
+    tag: do-not-use
     pullPolicy: IfNotPresent
 service:
   internalPort: 8080
