--- a/charts/wire-server/values.yaml
+++ b/charts/wire-server/values.yaml
@@ -11,3 +11,4 @@ tags:
   legalhold: false
   federator: false # see also galley.config.enableFederator and brig.config.enableFederator
   sftd: false
+  backoffice: false
