--- a/libs/libzauth/libzauth/Cargo.toml
+++ b/libs/libzauth/libzauth/Cargo.toml
@@ -9,7 +9,7 @@ name = "zauth"
 
 [dependencies]
 asexp           = ">= 0.3"
-rustc-serialize = ">= 0.3"
+base64          = "^0.13.0"
 sodiumoxide     = "^0.2.7"
 
 [dev-dependencies]
