charts/coturn: update for configurable metrics labels.

--- a/charts/coturn/templates/configmap-coturn-conf-template.yaml
+++ b/charts/coturn/templates/configmap-coturn-conf-template.yaml
@@ -33,6 +33,7 @@ data:
     ## prometheus metrics
     prometheus-ip=__COTURN_POD_IP__
     prometheus-port={{ .Values.coturnMetricsListenPort }}
+    prometheus-no-username-labels
 
     ## logs
     log-file=stdout
