charts/coturn: add UDP endpoints to manifest definitions.
coturn is configured to listen on both UDP and TCP in its configuration file,
however the UDP port is missing from the Kubernetes manifests. These should
be defined so coturn's listening ports are visible to the Kubernetes control
plane.

--- a/charts/coturn/templates/service.yaml
+++ b/charts/coturn/templates/service.yaml
@@ -13,5 +13,9 @@ spec:
     - name: coturn-tcp
       port: {{ .Values.coturnTurnListenPort }}
       targetPort: coturn-tcp
+    - name: coturn-udp
+      port: {{ .Values.coturnTurnListenPort }}
+      targetPort: coturn-udp
+      protocol: UDP
   selector:
     {{- include "coturn.selectorLabels" . | nindent 4 }}
