--- a/tools/db/service-backfill/service-backfill.cabal
+++ b/tools/db/service-backfill/service-backfill.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: eea1868ca30f5a543a41c3059a0f4dd1dc220703b7e0ffe78baa4e70381e9934
+-- hash: d52fc3528a20d3de8421d3878e46d02f0cea51773351fc8f8663420d85a9f5f4
 
 name:           service-backfill
 version:        1.0.0
@@ -66,7 +66,6 @@ executable service-backfill
   ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -funbox-strict-fields -threaded -with-rtsopts=-N -with-rtsopts=-T -rtsopts
   build-depends:
       base
-    , brig-types
     , cassandra-util
     , conduit
     , imports
@@ -75,4 +74,5 @@ executable service-backfill
     , tinylog
     , types-common
     , unliftio
+    , wire-api
   default-language: Haskell2010
