retry Redis connection in case of network errors

--- a/services/gundeck/gundeck.cabal
+++ b/services/gundeck/gundeck.cabal
@@ -45,6 +45,7 @@ library
       Gundeck.Push.Native.Types
       Gundeck.Push.Websocket
       Gundeck.React
+      Gundeck.Redis
       Gundeck.Run
       Gundeck.ThreadBudget
       Gundeck.ThreadBudget.Internal
