--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -56,6 +56,7 @@ library
       Galley.Cassandra.Code
       Galley.Cassandra.Conversation
       Galley.Cassandra.Conversation.Members
+      Galley.Cassandra.Conversation.MLS
       Galley.Cassandra.ConversationList
       Galley.Cassandra.CustomBackend
       Galley.Cassandra.Instances
