--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -56,6 +56,7 @@ library
       Galley.Cassandra.Code
       Galley.Cassandra.Conversation
       Galley.Cassandra.Conversation.Members
+      Galley.Cassandra.Conversation.MLS
       Galley.Cassandra.ConversationList
       Galley.Cassandra.CustomBackend
       Galley.Cassandra.Instances
@@ -625,6 +626,7 @@ executable galley-schema
       V65_MLSRemoteClients
       V66_AddSplashScreen
       V67_MLSFeature
+      V68_MLSCommitLock
       Paths_galley
   hs-source-dirs:
       schema/src
